Mobile align-end fix

--- a/src/assets/theme/index.scss
+++ b/src/assets/theme/index.scss
@@ -15,6 +15,10 @@ $brand-gray-text: #696969;
   text-align: center
 }
 
+.align-end {
+  text-align: -webkit-right;
+}
+
 .capitalize {
   text-transform: capitalize
 }
